k8s/cni/cilium/networkpolicies/allow-all-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-all-test
  namespace: kube-system
spec:
  endpointSelector: {}
  ingress:
  - {}
  egress:
  - {}
