k8s/cni/cilium/networkpolicies/allow-kube-api.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-kube-api
spec:
  endpointSelector: {}
  egress:
  - toEntities:
    - kube-apiserver
    - host
    - world
    toPorts:
    - ports:
      - port: "6443"
        protocol: TCP
