k8s/cni/cilium/networkpolicies/allow-pod-to-pod.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-all-pods
spec:
  endpointSelector: {}
  ingress:
  - fromEntities:
    - all
  egress:
  - toEntities:
    - all
